--- a/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
+++ b/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
@@ -5,7 +5,7 @@
 
         try
         {
-            string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&target={0}", @Uri.EscapeDataString(gunname));
+            string urlSbcu = string.Format("http://gensvw1178.gen.volvocars.net/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&target={0}", @Uri.EscapeDataString(gunname));
             <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
                 <i class="fas fa-chart-line"></i>
             </a>
@@ -22,7 +22,7 @@
         /**/
         try
         {
-            string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&Controller={0}&Toolid={1}", @Uri.EscapeDataString(controllername), toolId);
+            string urlSbcu = string.Format("http://gensvw1178.gen.volvocars.net/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&Controller={0}&Toolid={1}", @Uri.EscapeDataString(controllername), toolId);
             <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
                 <i class="fas fa-chart-line"></i>
             </a>
