--- a/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div id="SupervisieGridSpincontainer" style="position:relative">
-    <div id="SupervisieGrid" class="mvc-grid"></div>
+    <div data-name="SupervisieGrid" class="mvc-grid"></div>
 </div>
 
 @*render popuover modal*@
@@ -19,7 +19,7 @@
     <!--script for supervisiegrid-->
     <script type="text/javascript">
     //render grid and subscrible to row clicked events
-    $('#SupervisieGrid').mvcgrid({
+        $('[data-name="SupervisieGrid"]').mvcgrid({
         sourceUrl: '@Url.Action("_supervisie")', // Grid source url string
         requestType: 'get', // Ajax grid request type
         reload: true, // Grid reload indicator
@@ -36,7 +36,7 @@
         },
         reloadFailed: function (result) {
             console.log(result);
-            $("#SupervisieGrid").html("<div class='alert alert-danger'>Error while loading!! </div>");
+            $(('[data-name="SupervisieGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
         }
     });
 
@@ -64,7 +64,7 @@
         //trigger full window reload
         $.connection.dataRefreshHub.client.newData = function () {
             console.log("Supervisie reload");
-            $('#Supervisie').mvcgrid({
+            $(('[data-name="SupervisieGrid"]').mvcgrid({
                 reload: true
             });
         }
