--- a/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
@@ -36,7 +36,7 @@
         },
         reloadFailed: function (result) {
             console.log(result);
-            $(('[data-name="SupervisieGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
+            $('[data-name="SupervisieGrid"]').html("<div class='alert alert-danger'>Error while loading!! </div>");
         }
     });
 
@@ -64,7 +64,7 @@
         //trigger full window reload
         $.connection.dataRefreshHub.client.newData = function () {
             console.log("Supervisie reload");
-            $(('[data-name="SupervisieGrid"]').mvcgrid({
+            $('[data-name="SupervisieGrid"]').mvcgrid({
                 reload: true
             });
         }
