--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -76,8 +76,8 @@
             </p>
 
             <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeDash" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
-                Boommap met aantal storingen
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
+                Boommap met aantal storingen + trent
             </p>
 
             <p>
@@ -194,6 +194,7 @@
 
         <p><a href="~/tableau/EmbeddedDesktop?workbook=Kostenschrootonderdelen&sheet=Dashboard1" class="btn btn-primary btn-sm">Schrootkosten &raquo;</a></p>
         <p><a href="~/tableau/EmbeddedDesktop?workbook=PBM_Augustus2018&sheet=Dashboard1" class="btn btn-primary btn-sm">PBMkosten &raquo;</a></p>
+        <p><a href="~/tableau/EmbeddedDesktop?workbook=AvailabilityMap&sheet=Dash" class="btn btn-primary btn-sm">Beschikbaarheid &raquo;</a></p>
     </div>
 </div>
 
