--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -8,126 +8,25 @@
     <h5>
         (gebruik user:
         <strong>e6308159</strong> pw:
-        <strong>e6308159</strong> om in te loggen in tableau)
+        <strong>e6308159</strong> om rechtstreeks in te loggen in <a href="https://tableau-test.volvocars.biz/#/signin?closePopupWhenDone=true&site=Ghent&authSetting">Tableau server &raquo;</a>)
     </h5>
-    <hr />
-    <h3>Gekende problemen</h3>
-
-    Als tableau hier niet automatisch geladen wordt (grijs scherm)
-    Ga naar
-    <a href="https://tableau-test.volvocars.biz/#/signin?closePopupWhenDone=true&site=Ghent&authSetting">Tableau server &raquo;</a> en log daar eerst in!
-    Kom na het inloggen terug naar
-    <strongd>deze</strongd> pagina.
-
-    Als de 'maximo' tools in tableau niet automatisch laden.
-    Ga naar
-    <a href="https://gensvw1178.gen.volvocars.net/"> https equi &raquo;</a>en klik daar op 'advanced' proceed. (werkt enkel in chrome)
-
-
-
+    *Enkel nodig om dashborden te bekijken die hieronder NIET beschikbaar zijn.
 </div>
 
-<div>
-    <h4>Desktop computers (max full HD)</h4>
-    <div class="card">
-        <div class="card-header bg-dark">
-            <h5 class="card-title text-white">
-                Manuele storings registratie (Maximo STW040)
-                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-            </h5>
-        </div>
-        <div class="card-body">
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Layout_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
-                layout data van STW040 en MAXIMO (ci)
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
-                layout data van STW040 en MAXIMO (ci) + Maximo tool
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=AfstartT2&sheet=Afstart" class="btn btn-primary btn-sm">Afstart &raquo;</a>
-                layout data maximo met wekelijkse afstart.
-            </p>
-
-        </div>
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Manuele storings registratie (Maximo STW040)
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
+    <div class="card-body">
 
-    <hr />
-
-    <div class="card">
-        <div class="card-header bg-dark">
-            <h5 class="card-title text-white">
-                Automatische storings registratie (VCSC VASC)
-                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-            </h5>
-        </div>
-        <div class="card-body">
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Layout_CountofDt" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
-                layout met aantal storingen
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Dash_Layout_Breakdown" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
-                layout met aantal storingen + error trent grafiek
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
-                Boommap met aantal storingen + trent
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeLocationLevel" class="btn btn-primary btn-sm">ObjectTreeLocationLevel &raquo;</a>
-                Boommap met aantal sotringen per location. (filters voor top X en verantwoordelijkheidsgebied.)
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=MDTMWTMTTRlijn" class="btn btn-primary btn-sm">MDTMWTMTTRlijn &raquo;</a>
-                Opvolging MDT MWT MTTR per zone / ploeg / lijn
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=MDTMWTMTTRobject" class="btn btn-primary btn-sm">MDTMWTMTTRobject &raquo;</a>
-                Opvolging MDT MWT MTTR per zone / object
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=RackTracking&sheet=RackDash" class="btn btn-primary btn-sm">RACKTRACK &raquo;</a>
-                Opvolging Pickfouten in racken (RFID)
-            </p>
-
-        </div>
-    </div>
-
-    <hr />
-
-    <div class="card">
-        <div class="card-header bg-dark">
-            <h5 class="card-title text-white">
-                Asset management
-                <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-            </h5>
-        </div>
-        <div class="card-body">
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetMap" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
-                Layout assets (om te zien of alles gemapt is)
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleProductionTeam" class="btn btn-primary btn-sm">ResponsibleProductionTeam &raquo;</a>
-                Layout die toont welke verantwoordelijkheid bij welk PRODUCTIE team zit.
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleTechnicianTeam" class="btn btn-primary btn-sm">ResponsibleTechnicianTeam &raquo;</a>
-                Layout die toont welke verantwoordelijkheid bij welk MAINT team zit.
-            </p>
-        </div>
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">Layout &raquo;</a>
+            STW040 en MAXIMO (ci) + Maximo tool
+        </p>
+        <p class="text-muted">*Als de 'maximo' tools in tableau niet automatisch laden. (chrome) ga naar <a href="https://gensvw1178.gen.volvocars.net/"> equi &raquo;</a>en klik daar op 'advanced' proceed.</p>
     </div>
 </div>
 
@@ -136,111 +35,108 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Tipdress NGAC
+            Automatische storings registratie (VCSC VASC STO)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
-
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=Weardress" class="btn btn-primary btn-sm">Wear/dress &raquo;</a>
-            Slijtage per dressbeurt per robot
-        </p>
-
-
-        <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=WeardressTrend" class="btn btn-primary btn-sm">Wear/dressTrend &raquo;</a>
-            Slijtage per dressbeurt per robot trent
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Dash_Layout_Breakdown" class="btn btn-primary btn-sm">Layout &raquo;</a>
+            layout met aantal storingen + error trent grafiek
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=DressFaults" class="btn btn-primary btn-sm">DressFaults &raquo;</a>
-            Boommap met dressproblemen per fout type
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">Tree (FaultLevel) &raquo;</a>
+            Aantal storingen per fout + trent grafiek
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=TipChangeDash" class="btn btn-primary btn-sm">Tipchanges/shift &raquo;</a>
-            Aantal tipchange per area per shift
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeLocationLevel" class="btn btn-primary btn-sm">Tree (LocationLevel) &raquo;</a>
+            Aantal storingen per location. (filters voor top X en verantwoordelijkheidsgebied.)
         </p>
-    </div>
-</div>
 
-<hr />
-<div class="card">
-    <div class="card-header bg-dark">
-        <h5 class="card-title text-white">
-            Bolting
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-        </h5>
-    </div>
-    <div class="card-body">
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=RackTracking&sheet=RackDash" class="btn btn-primary btn-sm">Rack &raquo;</a>
+            Pickfouten in rekken (Greenfield)
+        </p>
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=Bolting&sheet=BoltingDash" class="btn btn-primary btn-sm">Bolting &raquo;</a>
-            Bolting
+            Aantal schroeffouten  (HOP)
         </p>
+
     </div>
 </div>
 
 <hr />
-<div class="card">
-    <div class="card-header bg-dark">
-        <h5 class="card-title text-white">
-            Productie
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-        </h5>
-    </div>
-    <div class="card-body">
-
-        <p><a href="~/tableau/EmbeddedDesktop?workbook=Kostenschrootonderdelen&sheet=Dashboard1" class="btn btn-primary btn-sm">Schrootkosten &raquo;</a></p>
-        <p><a href="~/tableau/EmbeddedDesktop?workbook=PBM_Augustus2018&sheet=Dashboard1" class="btn btn-primary btn-sm">PBMkosten &raquo;</a></p>
-        <p><a href="~/tableau/EmbeddedDesktop?workbook=AvailabilityMap&sheet=Dash" class="btn btn-primary btn-sm">Beschikbaarheid &raquo;</a></p>
-    </div>
-</div>
-
-<hr />
-<div class="alert alert-info">
-    <h3>The next card is for 4K displays!</h3>
-</div>
 
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            4K Digiborden (max ultra HD)
+            IE
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
 
         <p>
-            <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_breakdowns&sheet=Layout_CountofDt" class="btn btn-primary btn-sm">4K Layout_CountofDt &raquo;</a>
-            Bollen op layout data van STO (plc) en NGAC (abb robots)
+            <a href="~/tableau/EmbeddedDesktop?workbook=AvailabilityMap&sheet=Dash" class="btn btn-primary btn-sm">Beschikbaarheid &raquo;</a>
+            Opvolging beschikbaarheid (Stations niveau)
+        </p>
+        <p class="text-warning">*Dit systeem update nog NIET automaitsch en is in beta</p>
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=RobotCycleTime&sheet=CTrobot" class="btn btn-primary btn-sm">CTrobot &raquo;</a>
+            Robotcycletime (Greenfield)
+        </p>
+    </div>
+</div>
+
+<hr />
+
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Asset management
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body" style="display:none">
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetMap" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
+            Layout assets (om te zien of alles gemapt is)
         </p>
 
         <p>
-            <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_breakdowns&sheet=ObjectTree" class="btn btn-primary btn-sm">4K ObjectTree &raquo;</a>
-            Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleProductionTeam" class="btn btn-primary btn-sm">ResponsibleProductionTeam &raquo;</a>
+            Layout die toont welke verantwoordelijkheid bij welk PRODUCTIE team zit.
         </p>
 
         <p>
-            <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">Dash_MaximoStw040 &raquo;</a>
-            Bollen op layout data van STW040 en MAXIMO (ci)
+            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleTechnicianTeam" class="btn btn-primary btn-sm">ResponsibleTechnicianTeam &raquo;</a>
+            Layout die toont welke verantwoordelijkheid bij welk MAINT team zit.
         </p>
+    </div>
+</div>
+
+<hr />
+
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Productie (Furkan)
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body">
 
         <p>
-            <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">HOP &raquo;</a>
-            Hop Beta
+            <a href="~/tableau/EmbeddedDesktop?workbook=Kostenschrootonderdelen&sheet=Dashboard1" class="btn btn-primary btn-sm">Schrootkosten &raquo;</a>
+            Opvolging van productie stukken die verschroot worden
         </p>
-
         <p>
-            <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=4KHOPAnalysis" class="btn btn-primary btn-sm">HOP2 &raquo;</a>
-            Hop Beta
+            <a href="~/tableau/EmbeddedDesktop?workbook=PBM_Augustus2018&sheet=Dashboard1" class="btn btn-primary btn-sm">PBMkosten &raquo;</a>
+            Opvolging van kosten beschermingsmiddelen per team
         </p>
-
-        <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=STO&sheet=EventCountDash" class="btn btn-primary btn-sm">STO &raquo;</a>
-            Opvolging STO op layout (plc database)
-        </p>
-
     </div>
 </div>
