--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        VSTO toolkit
+                        Toolkit
                     </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item">
