--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -18,8 +18,9 @@
         @MyHtmlHelpers.EquiLink("/Gadata/Table/PloegRapportWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 1 }, null))
         @MyHtmlHelpers.EquiLink("/Gadata/Table/SupervisieWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 2 }, null))
         @MyHtmlHelpers.EquiLink("/Alert/Alert/Index", "fas fa-bell", EqUiWebUi.defaultArea.Alerts, helperText: EqUiWebUi.defaultArea.AlertsDescription, iconClasses: "bg-warning", helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 3 }, null))
-        @MyHtmlHelpers.EquiLink("/Home/Rendersite?url=" + @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet"), "far fa-object-group", "Supervisie (brownfield)", helperText: "Satline supervisie schermen")
         @MyHtmlHelpers.EquiLink("https://volvocars.plantview.se/?v=ps&t=p:default,c:projectselector,m:t&ps=ps1&ps1=q:vcg", "fas fa-industry", "Plantview", helperText: "3d scans of all volvo plants")
+        @MyHtmlHelpers.EquiLink("/Maximo_ui/Workorder/Workorders", "fas fa-briefcase", "Maximo_ui", helperText: "Fast and simple Maximo interface")
+        @MyHtmlHelpers.EquiLink("/Tableau/index", "fas fa-chart-line", "Tableau", helperText: "Dashbords done right")
     </div>
 </div>
 
@@ -45,37 +46,16 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Tableau
+            Brownfield Only
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
-        <p>
-            <a href="~/Tableau/index" class="btn btn-primary btn-sm">Tableau &raquo;</a>
-            Een interactive manier om naar data te kijken.
-        </p>
+        @MyHtmlHelpers.EquiLink("/Home/Rendersite?url=" + @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet"), "far fa-object-group", "Supervisie (brownfield)", helperText: "Satline supervisie schermen")
     </div>
 </div>
 
 <p></p>
-
-<div class="card">
-    <div class="card-header bg-dark">
-        <h5 class="card-title text-white">
-            Maximo
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
-        </h5>
-    </div>
-    <div class="card-body">
-        <p>
-            <a href="~/Maximo_ui/Maximo/index" class="btn btn-primary btn-sm">Maximo &raquo;</a>
-            Alles in verband met maximo
-        </p>
-    </div>
-</div>
-
-<p></p>
-
 
 @*This card is default collapsed see fa-rotate-180 and display:none*@
 <div class="card">
