--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -21,11 +21,16 @@
         </h5>
     </div>
     <div class="card-body">
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=BlockLayout_MaximoStw040" class="btn btn-warning btn-sm">BlockLayout&raquo;</a>
+            STW040 en MAXIMO
+        </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">Layout &raquo;</a>
-            STW040 en MAXIMO (ci) + Maximo tool
+            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=AssetLayout_MaximoStw040" class="btn btn-primary btn-sm">AssetLayout&raquo;</a>
+            STW040 en MAXIMO + Maximo tool
         </p>
+
         <p class="text-muted">*Als de 'maximo' tools in tableau niet automatisch laden. (chrome) ga naar <a href="https://gensvw1178.gen.volvocars.net/"> equi &raquo;</a>en klik daar op 'advanced' proceed.</p>
     </div>
 </div>
@@ -41,18 +46,20 @@
     </div>
     <div class="card-body">
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Dash_Layout_Breakdown" class="btn btn-primary btn-sm">Layout &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=BlockLayout_Breakdown" class="btn btn-warning btn-sm">BlockLayout&raquo;</a>
+            layout met aantal storingen
+        </p>
+
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=AssetLayout_Breakdown" class="btn btn-primary btn-sm">AssetLayout&raquo;</a>
             layout met aantal storingen + error trent grafiek
         </p>
 
-        <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">Tree (FaultLevel) &raquo;</a>
-            Aantal storingen per fout + trent grafiek
-        </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeLocationLevel" class="btn btn-primary btn-sm">Tree (LocationLevel) &raquo;</a>
-            Aantal storingen per location. (filters voor top X en verantwoordelijkheidsgebied.)
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">Tree (FaultLevel) &raquo;</a>
+            Aantal storingen per fout + trent grafiek
         </p>
 
         <p>
@@ -80,10 +87,10 @@
     <div class="card-body">
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=AvailabilityMap&sheet=Dash" class="btn btn-primary btn-sm">Beschikbaarheid &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=AvailabilityMap&sheet=Dash" class="btn btn-warning btn-sm">Beschikbaarheid &raquo;</a>
             Opvolging beschikbaarheid (Stations niveau)
         </p>
-        <p class="text-warning">*Dit systeem update nog NIET automaitsch en is in beta</p>
+        <p class="text-muted">*Dit systeem update nog NIET automaitsch en is in beta</p>
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=RobotCycleTime&sheet=CTrobot" class="btn btn-primary btn-sm">CTrobot &raquo;</a>
@@ -103,17 +110,17 @@
     </div>
     <div class="card-body" style="display:none">
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetMap" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
-            Layout assets (om te zien of alles gemapt is)
+            <a href="~/tableau/EmbeddedDesktop?workbook=Assets&sheet=BlockLayout" class="btn btn-primary btn-sm">BlockLayout &raquo;</a>
+            Layout (om te zien of alles gemapt is)
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleProductionTeam" class="btn btn-primary btn-sm">ResponsibleProductionTeam &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Assets&sheet=ResponsibleProductionTeam" class="btn btn-primary btn-sm">ResponsibleProductionTeam &raquo;</a>
             Layout die toont welke verantwoordelijkheid bij welk PRODUCTIE team zit.
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleTechnicianTeam" class="btn btn-primary btn-sm">ResponsibleTechnicianTeam &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Assets&sheet=ResponsibleTechnicianTeam" class="btn btn-primary btn-sm">ResponsibleTechnicianTeam &raquo;</a>
             Layout die toont welke verantwoordelijkheid bij welk MAINT team zit.
         </p>
     </div>
