--- a/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
+++ b/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
@@ -4,7 +4,7 @@
     <div class="col-md-12">
         <div class="update-nag" onclick="location.href='@url'">
             <div class="update-split @iconClasses">
-                <i class="far @icon fa-2x"></i>
+                <i class="update-icon @icon fa-2x"></i>
             </div>
             <div class="update-text">
                 <div class="title">@linkText</div>
@@ -27,7 +27,7 @@
 
 }
 
-@*help to render a link pannel from the database*@
+@*help to render a link panel from the database*@
 @helper EquiRenderPanel(string pannelName)
 {
 EqUiWebUi.Models.GADATAEntitiesEQUI db = new EqUiWebUi.Models.GADATAEntitiesEQUI();
