--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = @System.Configuration.ConfigurationManager.AppSettings["SiteName"].ToString();
 }
-<div class="jumbotron">
+<div class="">
     <h1>WELCOME IN @ViewBag.Title</h1>
 </div>
 
@@ -15,8 +15,8 @@
         </h5>
     </div>
     <div class="card-body">
-        @MyHtmlHelpers.EquiLink("/Gadata/Table/PloegRapportWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 1 }, null))
-        @MyHtmlHelpers.EquiLink("/Gadata/Table/SupervisieWebgrid", "fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 2 }, null))
+        @MyHtmlHelpers.EquiLink("/Gadata/Table/PloegRapportWebgrid", "far fa-list-alt", EqUiWebUi.defaultArea.ShiftReport, helperText: EqUiWebUi.defaultArea.ShiftReportDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 1 }, null))
+        @MyHtmlHelpers.EquiLink("/Gadata/Table/SupervisieWebgrid", "far fa-list-alt", EqUiWebUi.defaultArea.Supervision, helperText: EqUiWebUi.defaultArea.SupervisionDescription, helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 2 }, null))
         @MyHtmlHelpers.EquiLink("/Alert/Alert/Index", "fas fa-bell", EqUiWebUi.defaultArea.Alerts, helperText: EqUiWebUi.defaultArea.AlertsDescription, iconClasses: "bg-warning", helpurl: @Url.Action("ShowWiki", "Wikis", new { area = "", id = 3 }, null))
         @MyHtmlHelpers.EquiLink("https://volvocars.plantview.se/?v=ps&t=p:default,c:projectselector,m:t&ps=ps1&ps1=q:vcg", "fas fa-industry", "Plantview", helperText: "3d scans of all volvo plants")
         @MyHtmlHelpers.EquiLink("/Maximo_ui/Workorder/Workorders", "fas fa-briefcase", "Maximo_ui", helperText: "Fast and simple Maximo interface")
