--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -13,11 +13,14 @@
     </address>
 
     <address>
-        <i class="fas fa-envelope"></i> <strong> Support:</strong>   <a href="mailto:Support@example.com">sam.de.beul@volvocars.com</a><br />
+        <i class="fas fa-envelope"></i> <strong> Support:</strong>   <a href="mailto:sam.de.beul@volvocars.com">sam.de.beul@volvocars.com</a><br />
     </address>
+    <div>
+        @MyHtmlHelpers.EquiLink("https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/EQdbDevelopment/AllItems.aspx", "fas fa-bug", "IssueTracking", iconClasses: "bg-warning", helperText: "Report bugs or request features", OpenNewWindow: true)
+       <hr />
+        @MyHtmlHelpers.EquiLink("https://github.com/SDEBEUL/ExcelPluginFrontEnd", "fab fa-github", "Github", helperText: "No secrets, every line of code is on github", OpenNewWindow: true)
+    </div>
 
-    @MyHtmlHelpers.EquiLink("https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/EQdbDevelopment/AllItems.aspx", "fas fa-bug", "IssueTracking", iconClasses: "bg-warning", helperText: "Report bugs or request features")
-    @MyHtmlHelpers.EquiLink("https://github.com/SDEBEUL/ExcelPluginFrontEnd", "fab fa-github", "Github", helperText: "No secrets, every line of code is on github")
 </div>
 
 
