--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -5,6 +5,20 @@
     <h1>WELCOME IN @ViewBag.Title</h1>
 </div>
 
+
+<div class="card">
+    <div class="card-header ani_PulseRed">
+        <h5 class="card-title text-dark">
+            URGENT MESSAGE!
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body ani_PulseBlueOnce">
+        <h1>SQL servers are down for housekeeping.</h1>
+        All systems are down (it is working on it)
+    </div>
+</div>
+
 <p></p>
 
 <div class="card">
