--- a/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
+++ b/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
@@ -1,44 +1,73 @@
 ﻿@*helper to create links*@
-@helper EquiLink(string url, string icon, string linkText, string iconClasses = "", string helperText = "", string helpurl = "")
+@helper EquiLink(string url, string icon, string linkText, string iconClasses = "", string helperText = "", string helpurl = "", bool OpenNewWindow = false)
 {
-    <div class="col-md-12">
-        <div class="update-nag" onclick="location.href='@url'">
-            <div class="update-split @iconClasses">
-                <i class="update-icon @icon fa-2x"></i>
-            </div>
-            <div class="update-text">
-                <div class="title">@linkText</div>
-                <div class="d-none d-md-block text-muted">
-                    @helperText
-                    @*show helplink only if there is one*@
-                    @if (helpurl != "")
+    if (!OpenNewWindow)
+    {
+        <div class="col-md-12">
+            <div class="update-nag" onclick="location.href='@url'">
+                <div class="update-split @iconClasses">
+                    <i class="update-icon @icon fa-2x"></i>
+                </div>
+                <div class="update-text">
+                    <div class="title">@linkText</div>
+                    <div class="d-none d-md-block text-muted">
+                        @helperText
+                        @*show helplink only if there is one*@
+                        @if (helpurl != "")
+                        {
+                            <i class="fas fa-question-circle text-primary" onclick="window.open('@helpurl', 'EQUI', 'window settings')"></i>
+                        }
+                    </div>
+                    @*show collapes helper tooltip only if there is helpertext*@
+                    @if (helperText != "")
                     {
-                        <i class="fas fa-question-circle text-primary" onclick="window.open('@helpurl', 'EQUI', 'window settings')"></i>
+                        <a class="d-block d-md-none"><i class="fas fa-info-circle" data-toggle="tooltip" data-placement="right" title="@helperText"></i></a>
                     }
                 </div>
-                @*show collapes helper tooltip only if there is helpertext*@
-                @if (helperText != "")
-                {
-                    <a class="d-block d-md-none"><i class="fas fa-info-circle" data-toggle="tooltip" data-placement="right" title="@helperText"></i></a>
-                }
             </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <div class="col-md-12">
+            <div class="update-nag" onclick="window.open('@url', 'EQUI', 'window settings')">
+                <div class="update-split @iconClasses">
+                    <i class="update-icon @icon fa-2x"></i>
+                </div>
+                <div class="update-text">
+                    <div class="title">@linkText</div>
+                    <div class="d-none d-md-block text-muted">
+                        @helperText
+                        @*show helplink only if there is one*@
+                        @if (helpurl != "")
+                        {
+                            <i class="fas fa-question-circle text-primary" onclick="window.open('@helpurl', 'EQUI', 'window settings')"></i>
+                        }
+                    </div>
+                    @*show collapes helper tooltip only if there is helpertext*@
+                    @if (helperText != "")
+                    {
+                        <a class="d-block d-md-none"><i class="fas fa-info-circle" data-toggle="tooltip" data-placement="right" title="@helperText"></i></a>
+                    }
+                </div>
+            </div>
+        </div>
+    }
 
 }
 
 @*help to render a link panel from the database*@
 @helper EquiRenderPanel(string pannelName)
 {
-EqUiWebUi.Models.GADATAEntitiesEQUI db = new EqUiWebUi.Models.GADATAEntitiesEQUI();
-EqUiWebUi.Models.L_pannel pannel = db.L_pannel.Where(p => p.name == pannelName).FirstOrDefault();
-if (pannel == null)
-{
-    <div class="alert alert-warning">did not find pannel in db: @pannelName</div>
-    return;
-}
+    EqUiWebUi.Models.GADATAEntitiesEQUI db = new EqUiWebUi.Models.GADATAEntitiesEQUI();
+    EqUiWebUi.Models.L_pannel pannel = db.L_pannel.Where(p => p.name == pannelName).FirstOrDefault();
+    if (pannel == null)
+    {
+        <div class="alert alert-warning">did not find pannel in db: @pannelName</div>
+        return;
+    }
 
-List<EqUiWebUi.Models.L_link> links = db.L_link.Where(l => l.L_pannel_id == pannel.id).ToList();
+    List<EqUiWebUi.Models.L_link> links = db.L_link.Where(l => l.L_pannel_id == pannel.id).ToList();
 
     <div class="card">
         <div class="card-header @(pannel.HeaderCss ?? "bg-dark")">
@@ -54,7 +83,7 @@ List<EqUiWebUi.Models.L_link> links = db.L_link.Where(l => l.L_pannel_id == pann
             }
             else
             {
-                foreach(EqUiWebUi.Models.L_link link in links)
+                foreach (EqUiWebUi.Models.L_link link in links)
                 {
                     EquiLink(link.url, link.icon, link.name, iconClasses: link.iconcss, helperText: link.helptext, helpurl: "");
                 }
