--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
@@ -4,18 +4,19 @@
 {
     columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
     columns.Add(c => c.Date_Time).Titled("Time_Robot").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-    columns.Add(c => c.C_timestamp).Titled("Time_db").Formatted("{0:dd-MM-yyyy HH:mm}").Css("XXd-none XXd-md-block");
-    columns.Add(c => c.Weld_Counter).Titled("Weld_Counter").Css("XXd-none XXd-md-block");
+    columns.Add(c => c.C_timestamp).Titled("Time_db").Formatted("{0:dd-MM-yyyy HH:mm}").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.Weld_Counter).Titled("Weld_Counter").Css("d-none d-lg-table-cell");
     columns.Add(c => c.Dress_Num).Titled("#Dress");
     columns.Add(c => c.Wear_Fixed).Titled("(mm)Wear_Fixed");
     columns.Add(c => c.Wear_Move).Titled("(mm)Wear_Move");
+    columns.Add().Titled("Pwear").RenderedAs(c => MyRowStyling.getPwear(c)); 
     columns.Add(c => c.ErrorType).Titled("Error");
 
     columns.Add()
       .Encoded(false)
       .Filterable(false)
       .Sortable(false)
-      .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")).Css("XXd-none XXd-md-block"); //need to add the toolnumber in die model
+      .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")).Css("d-none d-lg-table-cell"); //need to add the tool number in die model
 }).Sortable().Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
